<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second_Page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/txt_Second_Page"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_p2_previous"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_marginBottom="162dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/btn_Previous_Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_p2_next"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_p2_next"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_marginBottom="162dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/btn_Next_Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_p2_last" />

    <Button
        android:id="@+id/btn_p2_last"
        android:layout_width="110dp"
        android:layout_height="73dp"
        android:layout_marginBottom="162dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_Last_Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>