<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/txt_First_Page"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_p1_next"
        android:layout_width="149dp"
        android:layout_height="100dp"
        android:layout_marginBottom="161dp"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="43dp"
        android:background="#FFFFFF"
        android:text="@string/btn_Next_Page"
        android:textSize="24sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_p1_last"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_p1_last"
        android:layout_width="162dp"
        android:layout_height="100dp"
        android:layout_marginBottom="161dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_Last_Page"
        android:textSize="24sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>