<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fourth_Page">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/txt_Fourth_Page"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_p4_previous"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="179dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="57dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="57dp"
        android:text="@string/btn_Previous_Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_p4_home"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_p4_home"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="179dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:text="@string/btn_First_Page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>